minor style changes

--- a/style.css
+++ b/style.css
@@ -23,7 +23,8 @@ body{
 .header{
     height:300px;
     overflow:hidden;
-
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease-in-out;
 }
 .header h1 {
     font-family: "Lucida Handwriting", cursive;
@@ -52,6 +53,8 @@ body{
     z-index:100;
     justify-content: flex-end;
     background: white;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease-in-out;
 }
 .nav ul {
     list-style: none;
@@ -98,10 +101,13 @@ body{
     font-size: 20px;
     text-align: center;
     height: auto;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease-in-out;
 }
 .main h1{
     font-size: 40px;
     text-align: left;
+
 }
 .aside {
 
